[metadata]
name = quasemrfscangui-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = Simple GUI frontend for the QUASEM RF scans for realtime views
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/quasemrfscangui
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    paho-mqtt >= 1.6.1
    matplotlib >= 3.3.4
    FreeSimpleGUI >= 5.1.0
    numpy >= 1.20.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    quasemrfscangui = quasemrfscangui.quasemrfscangui:main
